Grab brush used on Multires with Auto-Masking Topology enabled are breaking the mesh #79056

Closed
opened 2020-07-18 17:11:43 +02:00 by Bohdan Lvov · 9 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-17 19:20, hash: aa8279648e
Worked: 2.83.2

Short description of error
Grab brush used on Multires with Auto-Masking Topology enabled are breaking the mesh

Masking.gif

Looks like it's picking vertexes from some subdivision levels and ignoring others. Pose Brush acts how it is supposed to, though.
On flat geometry result is even worse:

image.png
Although, there's some apparent correlation to the base level:

image.png

Exact steps for others to reproduce the error

  1. Create a scene
  2. Switch to the Sculpt Mode
  3. Subdivide a few time
  4. Select Grab Brush and enable Auto-Masking by Topology
  5. Grab the model
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-17 19:20, hash: `aa8279648e` Worked: 2.83.2 **Short description of error** Grab brush used on Multires with Auto-Masking Topology enabled are breaking the mesh ![Masking.gif](https://archive.blender.org/developer/F8704365/Masking.gif) Looks like it's picking vertexes from some subdivision levels and ignoring others. Pose Brush acts how it is supposed to, though. On flat geometry result is even worse: ![image.png](https://archive.blender.org/developer/F8704360/image.png) Although, there's some apparent correlation to the base level: ![image.png](https://archive.blender.org/developer/F8704383/image.png) **Exact steps for others to reproduce the error** 1. Create a scene 2. Switch to the Sculpt Mode 3. Subdivide a few time 4. Select Grab Brush and enable Auto-Masking by Topology 5. Grab the model
Author

Added subscriber: @ostapblender

Added subscriber: @ostapblender

#79143 was marked as duplicate of this issue

#79143 was marked as duplicate of this issue

This issue was referenced by a39da2cbca

This issue was referenced by a39da2cbca19102589d5141c80a6bc013bd4c963

Closed as duplicate of #71490

Closed as duplicate of #71490

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'

Oops, merged wrong report

Oops, merged wrong report
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-07-21 22:28:29 +02:00

Added subscriber: @Vyach

Added subscriber: @Vyach
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79056
No description provided.